--- a/bias_QA/run_bias_qa_openai_batch.ipynb
+++ b/bias_QA/run_bias_qa_openai_batch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,11 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_input_batch_file(prompts=None, batch_name=None, model='41'):\n",
+    "def save_input_batch_file(prompts=None, batch_name=None, model='4o'):\n",
     "    if model == '4omini': gpt = 'gpt-4o-mini-2024-07-18'\n",
     "    elif model == '4o': gpt = 'gpt-4o-2024-11-20'\n",
     "    elif model == '41mini': gpt = 'gpt-4.1-mini-2025-04-14'\n",
@@ -64,20 +64,20 @@
     "        batch_list.append(tmp_input)\n",
     "    \n",
     "        if len(batch_list) >= 40000:\n",
-    "            with open(f\"./finance-legal-mrc/{batch_name}_{k}.jsonl\", 'w') as jsonl_file:\n",
+    "            with open(f\"./data/batch_files/{batch_name}_{k}.jsonl\", 'w') as jsonl_file:\n",
     "                for item in batch_list:\n",
     "                    jsonl_file.write(json.dumps(item) + '\\n')\n",
     "            k += 1\n",
     "            batch_list = []\n",
     "    \n",
-    "    with open(f\"./finance-legal-mrc/{batch_name}_{k}.jsonl\", 'w') as jsonl_file:\n",
+    "    with open(f\"./data/batch_files/{batch_name}_{k}.jsonl\", 'w') as jsonl_file:\n",
     "        for item in batch_list:\n",
     "            jsonl_file.write(json.dumps(item) + '\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,11 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt_path = f'./finfairnessQA_prompt.jsonl'\n",
+    "prompt_path = f'./data/finfairnessQA_prompt.jsonl'\n",
     "prompts = []\n",
     "with open(prompt_path, 'r') as f:\n",
     "    for line in f:\n",
@@ -176,11 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt_path = f'./finfairnessQA_prompt_w_g.jsonl'\n",
+    "prompt_path = f'./data/finfairnessQA_prompt_w_g.jsonl'\n",
     "prompts_w_g = []\n",
     "with open(prompt_path, 'r') as f:\n",
     "    for line in f:\n",
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100it [00:00, 476084.45it/s]\n"
+      "85it [00:00, 201649.23it/s]\n"
      ]
     },
     {
@@ -218,7 +218,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100it [00:00, 557012.48it/s]\n"
+      "85it [00:00, 598180.94it/s]\n"
      ]
     }
    ],
@@ -229,56 +229,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['./finance-legal-mrc/finfairnessqa_task_w_g_0.jsonl', './finance-legal-mrc/finfairnessqa_task_0.jsonl']\n"
+      "['./data/batch_files/finfairnessqa_task_w_g_0.jsonl', './data/batch_files/finfairnessqa_task_0.jsonl']\n"
      ]
     }
    ],
    "source": [
-    "batch_files = glob(f\"./finance-legal-mrc/*finfairnessqa_task*.jsonl\")\n",
+    "batch_files = glob(f\"./data/batch_files/*finfairnessqa_task*.jsonl\")\n",
     "print(batch_files)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:03<00:00,  1.55s/it]\n"
+      "100%|██████████| 2/2 [00:02<00:00,  1.38s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'finfairnessqa_task_w_g_0': {'input_file_id': 'file-FUszKbCnrR6ayEv3NU2svB',\n",
-       "  'batch_api_obj_id': 'batch_68430ca646988190bef5f0284ee445cc'},\n",
-       " 'finfairnessqa_task_0': {'input_file_id': 'file-XTDLb9zwZokCQuQEQzAk1h',\n",
-       "  'batch_api_obj_id': 'batch_68430ca7739c8190839a23fa85e53440'}}"
+       "{'finfairnessqa_task_w_g_0': {'input_file_id': 'file-EGck3o3SyVo6W2s4Hry1Nt',\n",
+       "  'batch_api_obj_id': 'batch_6845644d8dc4819084ab7411dbae8838'},\n",
+       " 'finfairnessqa_task_0': {'input_file_id': 'file-2guDAbTsRYyuQwn7oRGddN',\n",
+       "  'batch_api_obj_id': 'batch_6845644e8534819087ea3a4a8d339087'}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "batch_info_path = \"./finance-legal-mrc\"\n",
+    "batch_info_path = \"./data/batch_files\"\n",
     "run_batch_api(client, batch_files, batch_info_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -332,27 +332,27 @@
     }
    ],
    "source": [
-    "batch_info_path = \"./finance-legal-mrc\"\n",
+    "batch_info_path = \"./data/batch_files\"\n",
     "batch_api_update(batch_info_path, client)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'finfairnessqa_task_w_g_0': {'input_file_id': 'file-FUszKbCnrR6ayEv3NU2svB',\n",
-       "  'batch_api_obj_id': 'batch_68430ca646988190bef5f0284ee445cc',\n",
-       "  'output_file_id': 'file-H2yJLg6G46VYsnaxKu6DCj'},\n",
-       " 'finfairnessqa_task_0': {'input_file_id': 'file-XTDLb9zwZokCQuQEQzAk1h',\n",
-       "  'batch_api_obj_id': 'batch_68430ca7739c8190839a23fa85e53440',\n",
-       "  'output_file_id': 'file-964uctD1EAX3jgAe2JJo5N'}}"
+       "{'finfairnessqa_task_w_g_0': {'input_file_id': 'file-EGck3o3SyVo6W2s4Hry1Nt',\n",
+       "  'batch_api_obj_id': 'batch_6845644d8dc4819084ab7411dbae8838',\n",
+       "  'output_file_id': 'file-EeU1mPuR9LPzBedjQqhqvp'},\n",
+       " 'finfairnessqa_task_0': {'input_file_id': 'file-2guDAbTsRYyuQwn7oRGddN',\n",
+       "  'batch_api_obj_id': 'batch_6845644e8534819087ea3a4a8d339087',\n",
+       "  'output_file_id': 'file-RwjrVvwn8KwoSzj86rpGin'}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,27 +365,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100it [00:00, 26119.72it/s]\n"
+      "85it [00:00, 96251.58it/s]\n"
      ]
     }
    ],
    "source": [
-    "prompt_title = 'finfairnessqa_task'\n",
-    "prompt_path = f'./finfairnessQA_prompt.jsonl'\n",
-    "input_prompts = []\n",
-    "with open(prompt_path, 'r') as f:\n",
-    "    for line in f:\n",
-    "        input_prompts.append(json.loads(line.strip()))\n",
+    "prompt_title = 'finfairnessqa_task_w_g'\n",
     "\n",
     "preds = load_output_files(batch_list[f'{prompt_title}_0']['output_file_id'])\n",
-    "preds = ['답변거부' if p not in ['참', '거짓'] else p for p in preds]"
+    "preds = ['답변거부' if '답변' in p else p for p in preds]"
    ]
   },
   {
@@ -397,16 +392,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./bias_qa.csv\")"
+    "df = pd.read_csv(\"./data/bias_qa_v2.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,16 +412,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.3500\n",
-      "Financial QA Accuracy: 0.5645\n",
-      "Bias QA Accuracy: 0.0000\n"
+      "Accuracy: 0.7059\n",
+      "Financial QA Accuracy: 0.5833\n",
+      "Bias QA Accuracy: 1.0000\n"
      ]
     }
    ],
@@ -440,6 +435,35 @@
     "# b- : 편향성 QA\n",
     "b_accuracy = (df[df.Index.str.startswith('b-')]['정답'] == df[df.Index.str.startswith('b-')]['response']).mean()\n",
     "print(f\"Bias QA Accuracy: {b_accuracy:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(54.11764705882353)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df['response'] == '답변거부').mean() * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.to_csv('./results/bias_qa_results_gpt4o_w_input_guardrails.csv')"
    ]
   },
   {
